# SLICES

./: .gitignore  .pre-commit-config.yaml  EXPERIMENTS_PLAN.md  EXPERIMENT_PLAN.md  FIX_R.md  README.md  SSL.md  main.py  pyproject.toml  pytest.ini
.claude/skills/wandb-analysis/: SKILL.md
.claude/skills/wandb-analysis/scripts/: query_runs.py
.github/workflows/: ci.yml
configs/: config.yaml  debug.yaml  evaluate_imputation.yaml  finetune.yaml  gru_d.yaml  prepare_dataset.yaml  pretrain.yaml  pretrain_contrastive.yaml  pretrain_jepa.yaml  pretrain_smart.yaml  supervised.yaml  xgboost.yaml
configs/concepts/: core_features.yaml  labs.yaml  outputs.yaml  static.yaml  vitals.yaml
configs/data/: mimic_iv.yaml  ricu.yaml
configs/datasets/: mimic_iv.yaml
configs/eval/: default.yaml
configs/extraction/: mimic_iv.yaml
configs/model/: gru_d.yaml  linear.yaml  observation_transformer.yaml  smart.yaml  transformer.yaml  transformer_large.yaml  transformer_medium.yaml
configs/phenotypes/: gems_icd10_to_icd9.csv
configs/protocol/: a.yaml  b.yaml  full_finetune.yaml  linear_probe.yaml
configs/ssl/: contrastive.yaml  jepa.yaml  mae.yaml  smart.yaml  ts2vec.yaml
configs/tasks/: aki_kdigo.yaml  decompensation.yaml  los_remaining.yaml  mortality.yaml  mortality_24h.yaml  mortality_48h.yaml  mortality_hospital.yaml  mortality_icu.yaml  phenotyping.yaml
docs/: EVAL_FAIRNESS.md  EXPERIMENT_PLAN.md  experiment_protocol.md
docs/internal/: EXPERIMENT_PLAN.md
examples/: callbacks_example.py  eval_metrics_example.py  extract_labels_example.py  extract_timeseries_hydra_example.py  mae_pretraining_example.py  transformer_encoder_example.py  transformer_with_dataset_example.py
scripts/: analyze_concepts.py  analyze_labels.py  auto_shutdown.sh  convert_csv_to_parquet.py  export_results.py  extract_mimic_iv.py  finetune.py  launch_sprint1.sh  launch_thesis_tmux.sh  measure_flops.py  pretrain.py  run_experiments.py  sanity_check.py  setup_and_extract.sh  setup_mimic_iv.py
scripts/debug/: capture_pipeline_stages.py  explore_missingness.py  export_snapshots.py  inspect_embeddings.py  inspect_pipeline.py  inspect_pipeline_stages.py
scripts/eval/: evaluate_fairness.py  evaluate_imputation.py
scripts/internal/: auto_shutdown.sh  launch_thesis_tmux.sh  run_experiments.py
scripts/preprocessing/: build_phenotype_icd10_codes.py  build_processed_data.py  convert_csv_to_parquet.py  create_combined_dataset.py  extract_mimic_iv.py  extract_ricu.py  extract_with_ricu.R  prepare_dataset.py  setup_mimic_iv.py
scripts/sanity_checks/: sc_mae_pretraining.py  sc_supervised_learning.py
scripts/training/: finetune.py  pretrain.py  supervised.py  xgboost_baseline.py
scripts/validation/: diagnose_phenotype_prevalence.py  validate_phenotyping.py
src/slices/: __init__.py  constants.py
src/slices/data/: __init__.py  callbacks.py  config_loader.py  config_schemas.py  data_io.py  datamodule.py  dataset.py  decompensation_datamodule.py  decompensation_dataset.py  preparation.py  sliding_window.py  splits.py  tensor_cache.py  tensor_preprocessing.py  transforms.py  utils.py  value_transforms.py
src/slices/data/concepts/: vitals_dense.yaml
src/slices/data/extractors/: __init__.py  base.py  mimic_iv.py  ricu.py
src/slices/data/labels/: __init__.py  aki.py  base.py  decompensation.py  factory.py  (+3 more)
src/slices/debug/: __init__.py  debug_extractor.py  embeddings.py  plots.py  sampling.py  snapshots.py  staged_snapshots.py
src/slices/eval/: README.md  __init__.py  fairness.py  fairness_evaluator.py  fairness_metadata.py  imputation.py  inference.py  metrics.py  statistical.py
src/slices/models/: __init__.py  common.py
src/slices/tasks/: __init__.py  base.py
src/slices/training/: README.md  __init__.py  checkpoint_loading.py  config_schemas.py  finetune_module.py  pretrain_module.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_aki_builder.py  test_analyze_labels.py  test_base_extractor.py  test_callbacks.py  test_config_loader.py  test_config_schemas.py  test_contrastive_objective.py  test_data_io.py  test_dataset_datamodule.py  test_decompensation_builder.py  test_decompensation_dataset.py  test_embeddings.py  test_encoder_wrapper.py  test_eval_metrics.py  test_evaluate_fairness.py  test_export_results.py  test_extractor_config.py  test_extractor_integration.py  test_factories.py  test_fairness.py  test_fairness_evaluator.py  test_finetune_module.py  test_fixes.py  test_gru_d_encoder.py  test_imputation_eval.py  test_inference.py  test_jepa_objective.py  test_los_builder.py  test_mae_objective.py  test_metrics.py  test_model_common.py  test_package.py  test_phase1_bugfixes.py  test_phase2_config_quality.py  test_phase3_architecture.py  test_phenotyping.py  test_placeholder.py  (+16 more)
(+37 files in other folders)
