[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slices"
version = "0.1.0"
description = "SLICES: Self-Supervised Learning for Intensive Care Embeddings System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "polars>=0.19",
    "pyarrow>=14.0",
    "duckdb>=0.9",
    "wandb>=0.15",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
